crates/lash/tests/ui/scoped_turn_builders_are_not_prelude.rs
use lash::prelude::{
    ScopedQueuedTurnBuilder as PreludeScopedQueuedTurnBuilder,
    ScopedTurnBuilder as PreludeScopedTurnBuilder,
};
use lash::{AdvancedTurn, ScopedQueuedTurnBuilder, ScopedTurnBuilder};

fn main() {
    let _: Option<AdvancedTurn> = None;
    let _: Option<ScopedTurnBuilder<'static>> = None;
    let _: Option<ScopedQueuedTurnBuilder<'static>> = None;
    let _: Option<PreludeScopedTurnBuilder<'static>> = None;
    let _: Option<PreludeScopedQueuedTurnBuilder<'static>> = None;
}
